# asset-details

./: .env.template  .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: cd.yaml  ci.yaml
bins/api/: Cargo.toml
bins/api/src/: auth_interceptor.rs  config.rs  main.rs
bins/ingestor/: Cargo.toml
bins/ingestor/src/: config.rs  images.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/entities/: Cargo.toml  README.md
crates/entities/src/: company.rs  lib.rs  prelude.rs
crates/grpc/: Cargo.toml  build.rs
crates/grpc/protobufs/: .gitignore  README.md  asset_details.proto  asset_events.proto  authentication.proto  event_performance.proto  quotes.proto
crates/grpc/src/: lib.rs
crates/grpc/src/asset_details/: mod.rs
crates/grpc/src/authentication/: mod.rs
crates/grpc/tests/: load_test.rs
crates/migration/: Cargo.toml  README.md
crates/migration/src/: lib.rs  m20240913_000001_company_table.rs  main.rs
crates/services/: Cargo.toml
crates/services/src/: companies.rs  lib.rs  stocks.rs
crates/utils/: Cargo.toml
crates/utils/src/: cache.rs  env.rs  error.rs  exponential_backoff.rs  lib.rs  parsers.rs
deployment/: development.yaml  docker-compose.yaml  production.yaml
deployment/service/: Chart.yaml
docker/: api.Dockerfile  ingestor.Dockerfile
tests/load/: Cargo.toml
tests/load/src/: lib.rs
