[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { workspace = true }
utils = { workspace = true }
entities = { workspace = true }
grpc = { workspace = true }

# External packages
tokio = { workspace = true }
reqwest = { workspace = true }
sea-orm = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }

# grpc
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tower = { workspace = true }
tonic-middleware = { workspace = true }
