[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true }
# Logging
log = { workspace = true}
serde_json = { workspace = true}
dotenvy = { workspace = true}
sea-orm-migration = { workspace = true}
sea-orm = {workspace = true}
uuid = { workspace = true }
