[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { workspace = true}
entities = { workspace = true}
polygon-sdk = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
