[package]
name = "load"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../../crates/config" }
utils = { path = "../../crates/utils" }
grpc = { path = "../../crates/grpc" }

tokio = { version = "1", features = ["full"]}
futures = "0.3.31"
kinde-sdk = { git = "https://github.com/tradecrit/kinde-sdk.git", rev="6d2afdc" }
tracing = "0.1.40"
tonic = "0.12.3"
reqwest = {version = "0.12.7", default-features = false, features = ["rustls-tls", "json"]}
